--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Know Your Nouns</title>
 
     <!--Meta tags for search engines-->
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Know Your Nouns a website to help you learn 100s of French nouns.">
+    <meta name="keywords" content="English, French, Learn French, Language, Language Learning, Skills, Language Test, Improve Language, Improve French">
 
     <!--favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -27,6 +27,10 @@
     
 </head>
 <body>
+    <!--main container of all page content-->
+    <div class="">
+
+    </div>
     
     <script src="assets/js/script.js"></script>
 </body>
