basic styling added to home page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,33 @@
 </head>
 <body>
     <!--main container of all page content-->
-    <div class="">
+    <div class="container">
+        <!--title area div-->
+        <div class="title-area">
+            <h1>Know Your Nouns
+                <!--logo image-->
+                <img>
+            </h1>
+        </div>
 
+        <!--Info area div tells users the game and brief rules-->
+        <div class="info">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, eum. At laborum hic rem nam suscipit. Excepturi id voluptates blanditiis, autem error sit repudiandae dolor deserunt porro doloribus, modi quasi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia doloremque possimus veniam, debitis, explicabo ab laborum iusto molestias illum eum cumque laboriosam officiis et in, ad inventore consectetur unde totam.</p>
+        </div>
+
+        <!--div container for play and tutorial buttons-->
+        <div class="buttons">
+            <!--play button div-->
+            <div vlass="play-button">
+                Play
+            </div>
+
+            <!--tutorial button div-->
+            <div class="tutorial-button">
+                Tutorial
+            </div>
+        </div>
     </div>
     
     <script src="assets/js/script.js"></script>
