start styling play button

--- a/index.html
+++ b/index.html
@@ -46,13 +46,8 @@
         <!--div container for play and tutorial buttons-->
         <div class="buttons">
             <!--play button div-->
-            <div vlass="play-button">
+            <div class="play-button">
                 Play
-            </div>
-
-            <!--tutorial button div-->
-            <div class="tutorial-button">
-                Tutorial
             </div>
         </div>
     </div>
