styling to button and logo added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="title-area">
             <h1>Know Your Nouns
                 <!--logo image-->
-                <img>
+                <img href="assets/images/logo.png" alt="cirular logo with the outline of france within">
             </h1>
         </div>
 
@@ -46,9 +46,9 @@
         <!--div container for play and tutorial buttons-->
         <div class="buttons">
             <!--play button div-->
-            <div class="play-button">
+            <a class="play-button" href="catagories.html">
                 Play
-            </div>
+            </a>
         </div>
     </div>
     
