styling added to home page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         </div>
     </div>
 
+    <div id="logo-container">
+        <img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image">
+    </div>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
