styling to catagories complete

--- a/catagories.html
+++ b/catagories.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div id="logo-container">
-        <img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image">
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
     
     <!--main container of all page content-->
@@ -40,19 +40,19 @@
         </div>
 
         <div class="catagories">
-            <div class="catagory-box"><p>School</p></div>
-            <div class="catagory-box"><p>Work</p></div>
-            <div class="catagory-box"><p>Outdoors</p></div>
-            <div class="catagory-box"><p>Shopping</p></div>
-            <div class="catagory-box"><p>House</p></div>
-            <div class="catagory-box"><p>Resturant</p></div>
+            <div class="catagory-box"><a href="">School</a></div>
+            <div class="catagory-box"><a href="">Work</a></div>
+            <div class="catagory-box"><a href="">Outdoors</a></div>
+            <div class="catagory-box"><a href="">Shopping</a></div>
+            <div class="catagory-box"><a href="">House</a></div>
+            <div class="catagory-box"><a href="">Resturant</a></div>
         </div>
 
 
     </div>
 
     <div id="logo-container">
-        <img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image">
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
 
     <script src="assets/js/script.js"></script>
