--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div id="logo-container">
-        <img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image">
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
     
     <!--main container of all page content-->
@@ -56,7 +56,7 @@
     </div>
 
     <div id="logo-container">
-        <img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image">
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
 
     <script src="assets/js/script.js"></script>
