--- a/game.html
+++ b/game.html
@@ -39,13 +39,19 @@
             <h1>Catagories</h1>
         </div>
 
-        <div class="catagories">
-            <div class="catagory-box"><a href="game.html">School</a></div>
-            <div class="catagory-box"><a href="game.html">Work</a></div>
-            <div class="catagory-box"><a href="game.html">Outdoors</a></div>
-            <div class="catagory-box"><a href="game.html">Shopping</a></div>
-            <div class="catagory-box"><a href="game.html">House</a></div>
-            <div class="catagory-box"><a href="game.html">Resturant</a></div>
+        <div class="game">
+            <div class="game-box" id="english-word-1"><p>English 1</p></div>
+            <div class="game-box" id="french-word-1"><p>French 1</p></div>
+            <div class="game-box" id="english-word-2"><p>English 2</p></div>
+            <div class="game-box" id="french-word-2"><p>French 2</p></div>
+            <div class="game-box" id="english-word-3"><p>English 3</p></div>
+            <div class="game-box" id="french-word-3"><p>French 3</p></div>
+            <div class="game-box" id="english-word-4"><p>English 4</p></div>
+            <div class="game-box" id="french-word-4"><p>French 4</p></div>
+            <div class="game-box" id="english-word-5"><p>English 5</p></div>
+            <div class="game-box" id="french-word-5"><p>French 5</p></div>
+            <div class="game-box" id="english-word-6"><p>English 6</p></div>
+            <div class="game-box" id="french-word-6"><p>French 6</p></div>
         </div>
 
 
