added the game Pages

--- a/gamepages/housegame.html
+++ b/gamepages/housegame.html
@@ -39,13 +39,19 @@
             <h1>Catagories</h1>
         </div>
 
-        <div class="catagories">
-            <div class="catagory-box"><a href="gamepages/schoolgame.html" id="school">School</a></div>
-            <div class="catagory-box"><a href="gamepages/workgame.html" id="work">Work</a></div>
-            <div class="catagory-box"><a href="gamepages/outdoorgame.html" id="outdoors">Outdoors</a></div>
-            <div class="catagory-box"><a href="gamepages/shoppinggame.html" id="shopping">Shopping</a></div>
-            <div class="catagory-box"><a href="gamepages/housegame.html" id="house">House</a></div>
-            <div class="catagory-box"><a href="gamepages/restaurantgame.html" id="restaurant">Restaurant</a></div>
+        <div class="game">
+            <div class="game-box" id="house-english-word-1"><p>English 1</p></div>
+            <div class="game-box" id="house-french-word-1"><p>French 1</p></div>
+            <div class="game-box" id="house-english-word-2"><p>English 2</p></div>
+            <div class="game-box" id="house-french-word-2"><p>French 2</p></div>
+            <div class="game-box" id="house-english-word-3"><p>English 3</p></div>
+            <div class="game-box" id="house-french-word-3"><p>French 3</p></div>
+            <div class="game-box" id="house-english-word-4"><p>English 4</p></div>
+            <div class="game-box" id="house-french-word-4"><p>French 4</p></div>
+            <div class="game-box" id="house-english-word-5"><p>English 5</p></div>
+            <div class="game-box" id="house-french-word-5"><p>French 5</p></div>
+            <div class="game-box" id="house-english-word-6"><p>English 6</p></div>
+            <div class="game-box" id="house-french-word-6"><p>French 6</p></div>
         </div>
 
 
