formatted game pages to have correct styling

--- a/gamepages/housegame.html
+++ b/gamepages/housegame.html
@@ -12,10 +12,10 @@
     <meta name="keywords" content="English, French, Learn French, Language, Language Learning, Skills, Language Test, Improve Language, Improve French">
 
     <!--favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon/site.webmanifest">
 
     <!--googlefonts import-->
     <style>
@@ -23,12 +23,12 @@
     </style>
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     
 </head>
 <body>
     <div id="logo-container">
-        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
+        <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
     
     <!--main container of all page content-->
@@ -36,7 +36,7 @@
 
         <!--title area div-->
         <div class="title-area">
-            <h1>Catagories</h1>
+            <h1>House</h1>
         </div>
 
         <div class="game">
@@ -58,9 +58,9 @@
     </div>
 
     <div id="logo-container">
-        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
+        <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 </html>
