adding event listeners to buttons

--- a/gamepages/schoolgame.html
+++ b/gamepages/schoolgame.html
@@ -40,18 +40,18 @@
         </div>
 
         <div class="game">
-            <div class="game-box" id="school-english-word-1"><p>English 1</p></div>
-            <div class="game-box" id="school-french-word-1"><p>French 1</p></div>
-            <div class="game-box" id="school-english-word-2"><p>English 2</p></div>
-            <div class="game-box" id="school-french-word-2"><p>French 2</p></div>
-            <div class="game-box" id="school-english-word-3"><p>English 3</p></div>
-            <div class="game-box" id="school-french-word-3"><p>French 3</p></div>
-            <div class="game-box" id="school-english-word-4"><p>English 4</p></div>
-            <div class="game-box" id="school-french-word-4"><p>French 4</p></div>
-            <div class="game-box" id="school-english-word-5"><p>English 5</p></div>
-            <div class="game-box" id="school-french-word-5"><p>French 5</p></div>
-            <div class="game-box" id="school-english-word-6"><p>English 6</p></div>
-            <div class="game-box" id="school-french-word-6"><p>French 6</p></div>
+            <div class="game-box" id="school-english-word-1" onclick="activateAndAssess()"><p>English 1</p></div>
+            <div class="game-box" id="school-french-word-1" onclick="activateAndAssess()"><p>French 1</p></div>
+            <div class="game-box" id="school-english-word-2" onclick="activateAndAssess()"><p>English 2</p></div>
+            <div class="game-box" id="school-french-word-2" onclick="activateAndAssess()"><p>French 2</p></div>
+            <div class="game-box" id="school-english-word-3" onclick="activateAndAssess()"><p>English 3</p></div>
+            <div class="game-box" id="school-french-word-3" onclick="activateAndAssess()"><p>French 3</p></div>
+            <div class="game-box" id="school-english-word-4" onclick="activateAndAssess()"><p>English 4</p></div>
+            <div class="game-box" id="school-french-word-4" onclick="activateAndAssess()"><p>French 4</p></div>
+            <div class="game-box" id="school-english-word-5" onclick="activateAndAssess()"><p>English 5</p></div>
+            <div class="game-box" id="school-french-word-5" onclick="activateAndAssess()"><p>French 5</p></div>
+            <div class="game-box" id="school-english-word-6" onclick="activateAndAssess()"><p>English 6</p></div>
+            <div class="game-box" id="school-french-word-6" onclick="activateAndAssess()"><p>French 6</p></div>
         </div>
 
 
