error located in one of the Ids

--- a/gamepages/schoolgame.html
+++ b/gamepages/schoolgame.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     
 </head>
-<body>
+<body opnload="schoolGame()">
     <div id="logo-container">
         <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
@@ -39,7 +39,7 @@
             <h1>School</h1>
         </div>
 
-        <div class="game">
+        <div class="game" id="school-game">
             <div class="game-box" id="school-english-word-1" onclick="activateAndAssess1()"><p></p></div>
             <div class="game-box" id="school-french-word-1" onclick="activateAndAssess2()"><p></p></div>
             <div class="game-box" id="school-english-word-2" onclick="activateAndAssess3()"><p></p></div>
