change game running to function

--- a/gamepages/schoolgame.html
+++ b/gamepages/schoolgame.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     
 </head>
-<body opnload="schoolGame()">
+<body opnload="gameSchool()">
     <div id="logo-container">
         <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
