adding score area

--- a/gamepages/schoolgame.html
+++ b/gamepages/schoolgame.html
@@ -54,6 +54,9 @@
             <div class="game-box" id="school-french-word-6" onclick="activateAndAssess12()"><p></p></div>
         </div>
 
+        <div class="score-area">
+            <p>Score:<span id="score">0</span></p>
+        </div>
 
     </div>
 
