--- a/gamepages/schoolgame.html
+++ b/gamepages/schoolgame.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     
 </head>
-<body opnload="gameSchool()">
+<body onload="gameSchool()">
     <div id="logo-container">
         <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
@@ -55,7 +55,9 @@
         </div>
 
         <div class="score-area">
-            <p>Score:<span id="score">0</span></p>
+            <p>Score:
+            <span id="score-school">0</span>
+            </p>
         </div>
 
     </div>
