--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!--div container for play and tutorial buttons-->
         <div class="buttons">
             <!--play button div-->
-            <a class="play-button" href="catagories.html">
+            <a class="play-button" href="gamepages/game.html">
                 Play
             </a>
         </div>
