score and lives

--- a/game.html
+++ b/game.html
@@ -35,8 +35,14 @@
     <div class="container">
 
         <!--title area div-->
-        <div class="title-area">
-            <h1>Know Your Nouns</h1>
+        <div class="score-area">
+            <div class="score">
+                <p><i class="fa-solid fa-star"></i><span id="score-school">0</span></p>
+            </div>
+
+            <div class="lives">
+                <p><i class="fa-solid fa-heart"></i><span>3</span></p>
+            </div>
         </div>
 
         <div class="game" id="school-game">
@@ -54,11 +60,6 @@
             <div class="game-box" id="school-french-word-6" onclick="activateAndAssess12()"><p></p></div>
         </div>
 
-        <div class="score-area">
-            <p>Score:
-            <span id="score-school">0</span>
-            </p>
-        </div>
 
     </div>
 
@@ -66,6 +67,7 @@
         <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
 
+    <script src="https://kit.fontawesome.com/83eae7a1c8.js" crossorigin="anonymous"></script>
     <script src="../assets/js/script.js"></script>
 </body>
 </html>
