--- a/game.html
+++ b/game.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="lives">
-                <p><i class="fa-solid fa-heart"></i><span>3</span></p>
+                <p><i class="fa-solid fa-heart"></i><span id="lives-school">3</span></p>
             </div>
         </div>
 
