game starts on load

--- a/game.html
+++ b/game.html
@@ -26,11 +26,8 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     
 </head>
-<body onload="gameSchool()">
-    <div id="logo-container">
-        <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
-    </div>
-    
+<body onload="gameSchool(schoolWords, schoolContainersEnglish, schoolContainersFrench)">
+
     <!--main container of all page content-->
     <div class="container">
 
@@ -60,6 +57,7 @@
             <div class="game-box" id="school-french-word-6" onclick="activateAndAssess12()"><p></p></div>
         </div>
 
+        <div>Reset</div>
 
     </div>
 
