added game reset

--- a/game.html
+++ b/game.html
@@ -57,7 +57,7 @@
             <div class="game-box" id="school-french-word-6" onclick="activateAndAssess12()"><p></p></div>
         </div>
 
-        <div id="reset">Reset</div>
+        <div id="reset" onclick="gameReset(schoolWords, schoolContainersEnglish, schoolContainersFrench)">Reset</div>
 
     </div>
 
