--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
     </style>
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     
 </head>
 <body onload="gameSchool(schoolWords, schoolContainersEnglish, schoolContainersFrench)">
@@ -64,6 +64,6 @@
     </div>
 
     <script src="https://kit.fontawesome.com/83eae7a1c8.js" crossorigin="anonymous"></script>
-    <script src="../assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
