correct file path for logo on game page

--- a/game.html
+++ b/game.html
@@ -60,7 +60,7 @@
     </div>
 
     <div id="logo-container">
-        <a href="../index.html"><img src="../assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
     </div>
 
     <script src="https://kit.fontawesome.com/83eae7a1c8.js" crossorigin="anonymous"></script>
