styling to game buttons

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
         <!--Info area div tells users the game and brief rules-->
         <div class="info">
-            <p class="info-paragraph-1">Know Your Nouns is a fun pairs matching game to help inprove your French. A noun is used to identify any of a class of people, places, or things. For example tree or cow. Pressing play will take you to a list of catagories. Pressing your desired catagory will produce a random set of French and English Words. Your job is to match the correct pairs.</p>
-            <p class="info-paragraph-2">Catagories depend on which situations you might find those object in. For example; pens and computers within the office or knives and forkes within the kitchen.</p>
+            <p class="info-paragraph-1">Bonjour et bienvenue, Know Your Nouns is a free pair matching game to improve your French. When learning a language, expanding your vocabulary is one of the most important things you can do. With Know Your Nouns your one click away from a bank of French and English words. All you have to do is click the matching pairs.</p>
+            <p class="info-paragraph-2">Clicking play will give you a list of six English words and six French Words. Tap or click the matching pairs. If you are right your score in the top left will go up. Be careful, though a wrong pair will cause you to lose a life.</p>
         </div>
 
         <!--div container for play and tutorial buttons-->
