removed validator error in html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     
 </head>
 <body>
-    <div id="logo-container">
-        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
+    <div class="logo-container">
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" class="logo-image"></a>
     </div>
     
     <!--main container of all page content-->
@@ -55,8 +55,8 @@
         </div>
     </div>
 
-    <div id="logo-container">
-        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
+    <div class="logo-container">
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" class="logo-image"></a>
     </div>
 
     <script src="assets/js/script.js"></script>
