--- a/game.html
+++ b/game.html
@@ -59,8 +59,8 @@
 
     </div>
 
-    <div id="logo-container">
-        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" id="logo-image"></a>
+    <div class="logo-container">
+        <a href="index.html"><img src="assets/images/logo.png" alt="cirular logo with the outline of france within" class="logo-image"></a>
     </div>
 
     <script src="https://kit.fontawesome.com/83eae7a1c8.js" crossorigin="anonymous"></script>
