grammatical error in home page text rectified

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!--Info area div tells users the game and brief rules-->
         <div class="info">
             <p class="info-paragraph-1">Bonjour et bienvenue, Know Your Nouns is a free pair matching game to improve your French. When learning a language, expanding your vocabulary is one of the most important things you can do. With Know Your Nouns your one click away from a bank of French and English words. All you have to do is click the matching pairs.</p>
-            <p class="info-paragraph-2">Clicking play will give you a list of six English words and six French Words. Tap or click the matching pairs. If you are right your score in the top left will go up. Be careful, though a wrong pair will cause you to lose a life.</p>
+            <p class="info-paragraph-2">Clicking play will give you a list of six English words and six French Words. Tap or click the matching pairs. If you are right your score in the top left will go up. Be careful though, a wrong pair will cause you to lose a life.</p>
         </div>
 
         <!--div container for play and tutorial buttons-->
